# light-ddd-1

./: .env  Cargo.toml  sqlx-data.json
migrations/: 20220903055420_create_tasks_table.up.sql
src/: config.rs  context.rs  main.rs
src/application/: task_service.rs
src/domain/task/: mod.rs  task.rs  task_repository.rs
src/infra/: mod.rs  task_repository_impl.rs
src/presentation/: mod.rs  result.rs  task_controller.rs  tasks_controller.rs
