[package]
name = "light-ddd-1"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "offline",
  "chrono",
] }
ulid = { version = "1.0", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
